# sdp-2025-26

./: README.md
group-5/week-02/: README.md  main.cpp
group-5/week-03/: README.md  main.cpp
group-5/week-04/: README.md  bitset.hpp  main.cpp
group-5/week-05/: list.hpp
group-5/week-06/: README.md  doubleLinkedList.hpp  linkedList.hpp
group-5/week-07/: README.md
lectures/: CMakeLists.txt
lectures/floating-point/: main.cpp
lectures/src/: CMakeLists.txt
lectures/src/array-walking/: CMakeLists.txt  array-walking.cpp
lectures/src/containers/include/containers/: array.h  dynamic_array.h  fixed_size_array.h  list.h
lectures/src/containers/test/: CMakeLists.txt  test_array.cpp  test_dynamic_array.cpp  test_fixed_size_array.cpp  test_list.cpp
lectures/src/floating-point/: CMakeLists.txt  floating-point.cpp
lectures/src/utils/include/utils/: stopwatch.h
lectures/src/utils/test/: CMakeLists.txt
